# back-end-test

./: .dockerignore  Makefile  README.md  config.py  docker-compose-dev.yml  docker-compose-prod.yml  evolux-challenge.postman_collection.json  nginx.conf  pyproject.toml
.devcontainer/: devcontainer.json
app/: __init__.py
app/modules/: __init__.py
app/modules/auth/: __init__.py  models.py  schemas.py  views.py
app/modules/auth/utils/: jwt.py
app/modules/dids/: models.py  schemas.py  views.py
app/utils/: db.py
migrations/versions/: 270f385e5000_.py  b3bc3c6fb750_.py
tests/: conftest.py
tests/modules/auth/: conftest.py  test_views.py
tests/modules/auth/utils/: test_jwt.py
tests/modules/dids/: conftest.py  test_views.py
